# whisper-sync

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/whisper_sync/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/whisper_sync/: MainActivity.kt
app/src/main/java/com/example/whisper_sync/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/whisper_sync/: ExampleUnitTest.kt
